--- a/ATISMobile/ATISMobile/Properties/Resources.resx
+++ b/ATISMobile/ATISMobile/Properties/Resources.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="APKFtpURL" xml:space="preserve">
-    <value>ftp://192.168.1.3:21/ATISMobile.apk</value>
+    <value>ftp://192.168.85.16:1354/ATISMobile/ATISMobile.apk</value>
   </data>
   <data name="RestfulWebServiceURL" xml:space="preserve">
-    <value>http://192.168.1.3:3001</value>
+    <value>http://192.168.85.16:3001</value>
   </data>
 </root>
