--- a/ATISMobile/ATISMobile/Properties/Resources.resx
+++ b/ATISMobile/ATISMobile/Properties/Resources.resx
@@ -121,6 +121,6 @@
     <value>ftp://ATISMobile.ir:21/ATISMobile.apk</value>
   </data>
   <data name="RestfulWebServiceURL" xml:space="preserve">
-    <value>http://ATISMobile.ir:3001</value>
+    <value>http://192.168.20.3:3001</value>
   </data>
 </root>
